# FINANCE_TRACKER

./: Makefile  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  testing.ipynb
.github/workflows/: python-app.yml
backend/config/: config.py
backend/src/helper/: etl_data.py  iterate_datasets.py
backend/src/helper/schema/: accounts_schema.py  get_schema.py
backend/src/mongoDB/: database.py  mongodb_hook.py
backend/src/plaid_python/: Dockerfile  server.py  start.sh
backend/src/transactions/: assign_bank_acc.py  identification.py
backend/src/transactions/transform/: transform_amex_transactions.py  transform_bmo_cc_transactions.py  transform_bmo_checking_transactions.py  transform_cibc_cc_transactions.py  transform_cibc_checking_transactions.py  transform_rbc_checking_transactions.py
config/: config.py
configuration/: config_setup.py  develop.env
src/great_expectations/checkpoints/: gx_checkpoint.yml
src/great_expectations/expectations/: transaction_suite.json
src/plugins/categorization_model/: categorization.py  utils.py
src/plugins/categorization_model/categorized_data/: categorized.csv  (+1 more)
src/plugins/dq_check/: greatexpectations.py  gx_dq_check.py  gx_results_processor.py
src/plugins/email/: email_sender.py
src/plugins/mongoDB/: mongodb_hook.py
src/scripts/: execute.py  main.py
src/scripts/helper/: dev_helper.py  etl_data.py  identify_accounts.py  iterate_datasets.py
src/scripts/transaction_feeds/: accounts_config.py
tests/: pytest_actions.ini
tests/src/plugins/: test_transaction_matching_feature.py
(+31 files in other folders)
